--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="../static/css/min.style.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
