--- a/templates/research.html
+++ b/templates/research.html
@@ -3,47 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Research</title>
-    <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/css/min.style.css">
+
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
+    <script src="../static/bootstrap.min.js" ></script>
 </head>
 <body>
-<div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="../static/logo.png" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
+        <a class="navbar-brand" href="../templates/index.html"><img src="../static/logo.png" class="logo"></a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <span class="navbar-toggler-icon"></span> -->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="sr-only">Toggle navigation</span>
+
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav  ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="../templates/index.html#about" >About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="../templates/research.html" >Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Research</a>
+                    <a class="nav-link" href="#team" >Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Team <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../templates/index.html">Join Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Join Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="../templates/index.html" >Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
-</div>
+</header>
 <section>
-    <div class="container-fluid">
+    <div class="container-fluid" id="research">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="researchDiv">
@@ -58,84 +62,84 @@
                 </div>
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="text-align:center;">
-                <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 centering">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centering">
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
-                            <div class="card mx-auto researchcard padding-0" style="width: 18rem; text-align: center; align: center;">
+                            <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
                                 <div class="module">
                                     <header>
                                         <h1>
-                                            Gehna
+                                            Novel Interactions with wearables and tangibles
                                         </h1>
                                     </header>
                                 </div>
                                 <!--<div class="researchimg">-->
-                                    <!--<img src="../static/placeholder.jpg" alt="..." class="thumbnail">-->
+                                <!--<img src="../static/placeholder.jpg" alt="..." class="thumbnail">-->
                                 <!--</div>-->
-                                <div class="card-body">
-                                    <!--<h5 class="card-title projectName"><b>Gehna</b></h5>-->
-                                    <!--<p class="card-text memberField"></p>-->
-                                </div>
+                                <!--<div class="card-body">-->
+                                    <!--&lt;!&ndash;<h5 class="card-title projectName"><b>Gehna</b></h5>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<p class="card-text memberField"></p>&ndash;&gt;-->
+                                <!--</div>-->
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
-                            <div class="card mx-auto researchcard padding-0" style="width: 18rem; text-align: center; align: center;">
+                            <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
                                 <div class="module">
                                     <header>
                                         <h1>
-                                            Verbose
+                                            Mediated Reality based toolkits & systems
                                         </h1>
                                     </header>
                                 </div>
-                                <div class="card-body">
-                                    <!--<h5 class="card-title projectName"><b>Gehna</b></h5>-->
-                                    <!--<p class="card-text projectDetails"></p>-->
-                                </div>
+                                <!--<div class="card-body">-->
+                                    <!--&lt;!&ndash;<h5 class="card-title projectName"><b>Gehna</b></h5>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<p class="card-text projectDetails"></p>&ndash;&gt;-->
+                                <!--</div>-->
                             </div>
                         </div>
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                            <div class="card mx-auto researchcard" style="width: 18rem; text-align: center; align: center;">
+                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
+                            <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
                                 <div class="module">
                                     <header>
                                         <h1>
-                                            Project #3
+                                            Wearables for societal good
                                         </h1>
                                     </header>
                                 </div>
-                                <div class="card-body">
-                                    <!--<h5 class="card-title projectName"><b>Gehna</b></h5>-->
-                                    <!--<p class="card-text memberField"></p>-->
-                                </div>
+                                <!--<div class="card-body">-->
+                                    <!--&lt;!&ndash;<h5 class="card-title projectName"><b>Gehna</b></h5>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<p class="card-text memberField"></p>&ndash;&gt;-->
+                                <!--</div>-->
                             </div>
                         </div>
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                            <div class="card mx-auto researchcard" style="width: 18rem; text-align: center; align: center;">
+                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
+                            <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
                                 <div class="module">
                                     <header>
                                         <h1>
-                                            Project #4
+                                            Intelligent agents
                                         </h1>
                                     </header>
                                 </div>
-                                <div class="card-body">
-                                    <!--<h5 class="card-title projectName"><b>Gehna</b></h5>-->
-                                    <!--<p class="card-text memberField"></p>-->
-                                </div>
+                                <!--<div class="card-body">-->
+                                    <!--&lt;!&ndash;<h5 class="card-title projectName"><b>Gehna</b></h5>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<p class="card-text memberField"></p>&ndash;&gt;-->
+                                <!--</div>-->
                             </div>
                         </div>
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                            <div class="card mx-auto researchcard" style="width: 18rem; text-align: center; align: center;">
+                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
+                            <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
                                 <div class="module">
                                     <header>
                                         <h1>
-                                            Project #5
+                                            Animatronics
                                         </h1>
                                     </header>
                                 </div>
-                                <div class="card-body">
-                                    <!--<h5 class="card-title projectName"><b>Gehna</b></h5>-->
-                                    <!--<p class="card-text memberField"></p>-->
-                                </div>
+                                <!--<div class="card-body">-->
+                                    <!--&lt;!&ndash;<h5 class="card-title projectName"><b>Gehna</b></h5>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<p class="card-text memberField"></p>&ndash;&gt;-->
+                                <!--</div>-->
                             </div>
                         </div>
                     </div>
