--- a/templates/team.html
+++ b/templates/team.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Team</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/css/min.style.css">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-    <script src="../static/jquery-3.2.1.slim.min.js" ></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
     <script src="../static/bootstrap.min.js" ></script>
 </head>
@@ -47,9 +46,8 @@
         </div>
     </nav>
 </header>
-
-<section id="team">
-    <div class="container-fluid">
+<section>
+    <div class="container-fluid" id="team">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="meetDiv">
@@ -110,7 +108,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Manideepa Mukherjee</b></h5>
+                                        <h5 class="card-title memberName"><strong>Manideepa Mukherjee</strong></h5>
                                         <p class="card-text memberField">Sensor Design, E-Textile</p>
                                     </div>
                                 </div>
@@ -121,7 +119,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Manshul V. Belani</b></h5>
+                                        <h5 class="card-title memberName"><strong>Manshul V. Belani</strong></h5>
                                         <p class="card-text memberField">HCI, Assistive Technologies, Inclusive
                                             Design</p>
                                     </div>
@@ -143,7 +141,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Deepak Aggrawal</b></h5>
+                                        <h5 class="card-title memberName"><strong>Deepak Aggrawal</strong></h5>
                                         <p class="card-text memberField">Interaction Design, Gestures, AR</p>
                                     </div>
 
@@ -155,7 +153,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Jatin Arora</b></h5>
+                                        <h5 class="card-title memberName"><strong>Jatin Arora</strong></h5>
                                         <p class="card-text memberField">HCI, Construction Toolkits, Novel Input
                                             Modalities</p>
                                     </div>
@@ -167,7 +165,7 @@
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><b>Piyush Kumar</b></h5>
+                                        <h5 class="card-title memberName"><strong>Piyush Kumar</strong></h5>
                                         <p class="card-text memberField">VR/ AR/ MR along with Wearable Technologies</p>
                                     </div>
                                 </div>
