--- a/templates/research.html
+++ b/templates/research.html
@@ -34,10 +34,10 @@
                     <a class="nav-link" href="../templates/research.html" >Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#team" >Team</a>
+                    <a class="nav-link" href="../templates/team.html" >Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/index.html">Join Us</a>
+                    <a class="nav-link" href="../templates/joinus.html">Join Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../templates/index.html" >Contact</a>
