--- a/templates/team.html
+++ b/templates/team.html
@@ -34,10 +34,10 @@
                     <a class="nav-link" href="../templates/research.html" >Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#team" >Team</a>
+                    <a class="nav-link" href="../templates/team.html" >Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/index.html">Join Us</a>
+                    <a class="nav-link" href="../templates/joinus.html">Join Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../templates/index.html" >Contact</a>
@@ -76,7 +76,7 @@
                         Adviser
                         <hr style="border-color: #F5A623; width: 50%;">
                     </div>
-                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 centering">
+                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
