--- a/static/style.css
+++ b/static/style.css
@@ -48,23 +48,23 @@ body {
 .navbar-toggler .icon-bar:nth-of-type(1) {
   transform: translateX(0px) rotate(45deg);
   transform-origin: 0% 0%;
-  }
-  .navbar-toggler.collapsed .icon-bar:nth-of-type(1) {
+}
+.navbar-toggler.collapsed .icon-bar:nth-of-type(1) {
   transform: rotate(0);
-  }
-  .navbar-toggler .icon-bar:nth-of-type(2) {
+}
+.navbar-toggler .icon-bar:nth-of-type(2) {
   width: 0;
-  }
-  .navbar-toggler.collapsed .icon-bar:nth-of-type(2) {
+}
+.navbar-toggler.collapsed .icon-bar:nth-of-type(2) {
   width: 22px;
-  }
-  .navbar-toggler .icon-bar:nth-of-type(3) {
+}
+.navbar-toggler .icon-bar:nth-of-type(3) {
   transform: translateX(0px) translatey(1px) rotate(-45deg);
   transform-origin: 0% 100%;
-  }
-  .navbar-toggler.collapsed .icon-bar:nth-of-type(3) {
+}
+.navbar-toggler.collapsed .icon-bar:nth-of-type(3) {
   transform: rotate(0);
-  }
+}
 
 .navbar-dark .navbar-nav .nav-link{
   text-align: center;
@@ -152,7 +152,7 @@ video {
   margin: 1em;
   margin-top: 2em;
 }
- .social_media li a{
+.social_media li a{
   /* margin: 3em; */
   font-size: 0.7em;
   color: white;
@@ -183,8 +183,8 @@ video {
 
 
 .scrollDown a img{
-  -webkit-animation: all 2s linear infinite ;
-  animation: scroll 2s linear infinite ;
+  -webkit-animation: all 1.5s linear infinite ;
+  animation: scroll 1.5s linear infinite ;
 }
 .about{
   position: relative;
@@ -221,7 +221,7 @@ video {
 .research{
   position: relative;
   background-color: black;
-  padding-top: calc(50px + 2.5vw);
+  padding-top: calc(50px + 4vw);
   padding-bottom: 100px;
 }
 
@@ -231,17 +231,17 @@ video {
   color: white;
   font-size: calc(70px + 2vw);
   padding-left: calc(13vw - 20px);
-  margin-bottom: 100px;
+  margin-bottom: calc(50px + 2vw);
   width: 60vw;
   z-index: 1;
 }
 
-.research .row .see_more h5{
+.see_more h5{
   position: absolute;
   color: white;
   z-index: 3;
-  bottom: 65px;
-  padding-left: 150px;
+  bottom: calc(10px + 2vw);
+  padding-left: 5vw;
 }
 .research .row .see_more h5:hover{
   text-decoration: underline;
@@ -257,11 +257,11 @@ video {
   padding-left: 0;
   padding-right: 0;
   overflow: hidden;
-  max-width: 750px;
-  margin: 20px 20px;
+  max-width: 38vw;
+  margin: 0px 40px;
+  margin-bottom: 40px;
   background-color: rgb(255, 255, 255);
-  width: 400px;
-  height: 500px;
+  height: 35vw;
 }
 .re_img h4{
   position: absolute;
@@ -295,7 +295,18 @@ video {
   z-index: 1;
   opacity: 0.6;
 }
+
+.mob_seeMore{
+  visibility: hidden;
+  color: white;
+  text-decoration-color: white;
+}
+
 img{
   max-height: 100%;
   max-width: 100%;
+}
+
+.col-sm-6, .col-md-6{
+  flex: 0 0 75%;
 }
