--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -12,39 +12,40 @@
     <script src="../static/popper.min.js"></script>
 </head>
 <body>
-<div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="../static/logo.png" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
+        <a class="navbar-brand" href="#home"><img src="../static/logo.png" class="logo"></a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <span class="navbar-toggler-icon"></span> -->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="sr-only">Toggle navigation</span>
+
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav  ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about" >About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="../templates/research.html" >Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Research</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Team <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../templates/team.html" >Team</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Join Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#" >Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
-</div>
+</header>
 <section>
-    <div class="container-fluid">
+    <div class="container-fluid" id="joinus">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="researchDiv">
