--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Join Us</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <!--<link rel="stylesheet" href="../static/style.css">-->
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="../static/css/min.style.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
+    <script src="../static/js/main.js"></script>
 </head>
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
-        <a class="navbar-brand" href="#home"><img src="../static/logo.png" class="logo"></a>
+        <a class="navbar-brand" href="../templates/index.html"><img src="../static/logo.png" class="logo"></a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon"></span> -->
             <span class="icon-bar"></span>
@@ -26,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav  ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" >About</a>
+                    <a class="nav-link" href="../templates/index.html#about" >About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../templates/research.html" >Research</a>
@@ -35,10 +36,10 @@
                     <a class="nav-link" href="../templates/team.html" >Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Join Us</a>
+                    <a class="nav-link" href="../templates/joinus.html">Join Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" >Contact</a>
+                    <a class="nav-link" href="../templates/index.html" >Contact</a>
                 </li>
             </ul>
         </div>
