--- a/templates/research.html
+++ b/templates/research.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Research</title>
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/style.css">
+    <!--<link rel="stylesheet" href="../static/style.css">-->
     <link rel="stylesheet" href="../static/css/min.style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
