--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Weave Lab</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="../static/jquery-3.2.1.slim.min.js"></script>
-    <script src="../static/popper.min.js"></script>
-    <script src="../static/bootstrap.min.js"></script>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Weave Lab</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="../static/jquery-3.2.1.slim.min.js" ></script>
+  <script src="../static/popper.min.js" ></script>
+  <script src="../static/bootstrap.min.js" ></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/style.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/media_style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display" rel="stylesheet">
-    <!-- <script src="../static/jquery.scrollify.js" ></script> -->
-    <!-- <script src="../static/jquery.scrollTo.min.js" ></script> -->
-    <script src="../static/js/main.js"></script>
-    <!-- <script src="main.js"></script> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">  
+  <link rel="stylesheet" type="text/css" media="screen" href="../static/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../static/media_style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display" rel="stylesheet"> 
+  <!-- <script src="../static/jquery.scrollify.js" ></script> -->
+  <!-- <script src="../static/jquery.scrollTo.min.js" ></script> -->
+
+  <!-- <script src="main.js"></script> -->
 </head>
 
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
         <a class="navbar-brand" href="#home"><img src="../static/logo.png" class="logo"></a>
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon"></span> -->
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -38,19 +35,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav  ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="#about" >About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/research.html">Research</a>
+                    <a class="nav-link" href="../templates/research.html" >Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/team.html">Team</a>
+                    <a class="nav-link" href="../templates/team.html" >Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/joinus.html">Join Us</a>
+                    <a class="nav-link" href="#">Join Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Contact</a>
+                    <a class="nav-link" href="#" >Contact</a>
                 </li>
             </ul>
         </div>
@@ -59,108 +56,99 @@
 
 <!-- landing page -->
 <section class="scrollx home" data-section-name="home" id="home">
-    <div class="jumbotron jumbotron-fluid bg_video">
-        <video playsinline autoplay muted loop>
-            <source src="../static/final.webm" type="video/webm">
-        </video>
+<div class="jumbotron jumbotron-fluid bg_video"  >
+    <video playsinline autoplay muted loop>
+        <source src="../static/final.webm" type="video/webm">
+    </video>
 
-        <div class="container weave_logo justify-content-center align-items-center">
-            <img class="img-fluid" src="../static/WeaveLab.png" alt=""/>
-        </div>
-
-        <div class="container-fluid scrollDown justify-content-center">
-            <a href="#about"> <img class="img-fluid" src="../static/down_arrow.svg" alt=""/> </a>
-        </div>
-
-        <ul class="container social_media">
-            <li><a href="https://github.com/weave-lab-iiitd"><i class="fab fa-github fa-3x"></i></a></li>
-            <li><a href="https://twitter.com/WeaveIIITD"><i class="fab fa-twitter fa-3x"></i></a></li>
-        </ul>
-
-        <div class="container iiitd_logo">
-            <a href="https://www.iiitd.ac.in/"><img class="img-fluid" src="../static/iiitd.png" alt=""/> </a>
-        </div>
-
-
+    <div class="container weave_logo justify-content-center align-items-center">
+      <img class="img-fluid" src="../static/WeaveLab.png" alt="" /> 
     </div>
+
+    <div class="container-fluid scrollDown justify-content-center">
+            <a href="#about"> <img class="img-fluid" src="../static/down_arrow.svg" alt="" /> </a>
+        </div>
+
+    <ul class="container social_media">
+         <li><a href="https://github.com/weave-lab-iiitd"><i class="fab fa-github fa-3x"></i></a></li>
+        <li><a href="https://twitter.com/WeaveIIITD"><i class="fab fa-twitter fa-3x"></i></a></li>      
+    </ul>
+
+    <div class="container iiitd_logo">
+        <a  href="https://www.iiitd.ac.in/"><img class="img-fluid" src="../static/iiitd.png" alt="" /> </a>
+    </div>
+
+
+</div>
 </section>
 
 <!-- About Page -->
 <section class="scrollx about" data-section-name="about" id="about">
-    <div class="container-fluid">
-        <h1>About<br>The Lab</h1>
-        <div class="row">
-            <div class="col about-data">
-                <p>At Weave Lab we weave interactivity into everyday objects and experiences. We envision as well as
-                    discover through critical observations new opportunities for human-computer interactions. Through
-                    our extensive research on material and technologies, we prototype manifestations of our ideas, which
-                    we then iteratively improve. Our applied research approach interweaves basic research with which we
-                    contribute to the advancement of the technologies we leverage.
-                </p>
-                <div id="carouselAbout" class=" carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="../static/carousel1.png" alt="First slide"/>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="../static/carousel1.png" alt="Second slide"/>
-                        </div>
-                    </div>
+<div class="container-fluid">
+    <h1>About<br>The Lab</h1>
+    <div class="row">
+    <div class="col about-data">
+        <p>At Weave Lab we weave interactivity into everyday objects and experiences. We envision as well as discover through critical observations new opportunities for human-computer interactions. Through our extensive research on material and technologies, we prototype manifestations of our ideas, which we then iteratively improve. Our applied research approach interweaves basic research with which we contribute to the advancement of the technologies we leverage.
+        </p>
+        <div id="carouselAbout" class=" carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                <img class="d-block w-100" src="../static/carousel1.png" alt="First slide"/>
+                </div>
+                <div class="carousel-item">
+                <img class="d-block w-100" src="../static/carousel1.png" alt="Second slide"/>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+</div>
 </section>
 
 <!-- researches page -->
 <section id="research" style="margin-left:20px; margin-right:20px;">
-    <div class="container-fluid research ">
-        <div class="row">
-            <div class="col-8">
-                <h1>Research</h1>
-            </div>
-            <div class="col-4" style="position: relative;">
-                <a href="#" class="see_more"><h5>See More<img src="../static/down_arrow.svg"
-                                                              style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/>
-                </h5></a>
-            </div>
+<div class="container-fluid research ">  
+    <div class="row">
+        <div class="col-8">
+            <h1>Research</h1>
         </div>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-sm-6 col-lg-6 col-md-6 re_img">
-                    <a href="#">
-                        <img src="../static/img_1600_1024.jpg" alt="lego"/>
-                    </a>
-                    <h4><em>Research Topic</em></h4>
-                    <h3>Project topic</h3>
-                </div>
-                <div class="col-sm-6 col-lg-6 col-md-6 re_img">
-                    <a href="#">
-                        <img src="../static/img_1600_1024.jpg" alt="lego"/>
-
-                    </a>
-                    <h4><em>Research Topic</em></h4>
-                    <h3>Project topic</h3>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 justify-content-center mob_seeMore" style="position: relative; text-align: center;">
-                <div><a href="#">
-                    <h5>See More <img src="../static/down_arrow.svg"
-                                      style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/></h5></a>
-                </div>
-            </div>
+        <div class="col-4" style="position: relative;">
+            <a href="#" class="see_more"><h5>See More<img src="../static/down_arrow.svg" style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/></h5></a>
         </div>
     </div>
+    <div class="container">
+    <div class="row justify-content-center">
+        <div class="col-sm-6 col-lg-6 col-md-6 re_img">
+            <a href="#">
+                <img src="../static/img_1600_1024.jpg" alt="lego"/>
+            </a>
+            <h4><em>Research Topic</em></h4>
+            <h3>Project topic</h3>
+        </div>
+        <div class="col-sm-6 col-lg-6 col-md-6 re_img">
+            <a href="#">
+                <img src="../static/img_1600_1024.jpg" alt="lego"/>
+                
+            </a>
+            <h4><em>Research Topic</em></h4>
+            <h3>Project topic</h3>
+        </div>
+    </div>
+</div>
+<div class="row justify-content-center">
+    <div class="col-12 justify-content-center mob_seeMore" style="position: relative;">
+        <a href="#"><h5>See More<img src="../static/down_arrow.svg" style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/></h5></a>
+    </div>
+</div>
+</div>
 </section>
-<!--
+<!-- 
 <section id="contact">
     <div class="container-fluid contact">
         <h1>Contact</h1>
     </div>
 </section> -->
 
-
+<script src="../static/main.js" ></script>
 </body>
 </html>
