--- a/static/css/min.style.css
+++ b/static/css/min.style.css
@@ -74,6 +74,24 @@
     box-sizing: border-box;
 }
 
+
+#menu.scrolling{
+    background-color: rgba(255, 255, 255);
+    margin-top: -10px;
+    padding-bottom: 0;
+    transition: all 0.4s ease;
+}
+.scrolling .navbar-toggler .icon-bar{
+    background-color: black;
+}
+.scrolling .navbar-nav .nav-link, .scrolling .navbar-nav .nav-link:visited{
+    color: black;
+}
+.scrolling .navbar-nav .nav-link:hover{
+    color: #F5A623;
+}
+
+
 .projectName {
     margin-top: -10px;
     font-family: 'Lato', sans-serif;
