--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -5,12 +5,17 @@
     <title>Join Us</title>
     <!--<link rel="stylesheet" href="../static/style.css">-->
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/min.style.css">
+
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/css/min.style.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
-    <script src="../static/js/main.js"></script>
+    <!--<script src="../static/js/main.js"></script>-->
+    <script src="../static/js/bootstrap.min.js" ></script>
+
+
 </head>
 <body>
 <header>
@@ -69,6 +74,7 @@
                         ideas, which we then iteratively improve. Our applied research approach interweaves basic
                         research with which we contribute to the advancement of the technologies we leverage.</p>
                     <h3>Location</h3>
+                    <!--<a href="../templates/index.html#about">hello press here</a>-->
                     <p>IIIT-Delhi</p>
                     <h3>Application Process</h3>
                     <p>
@@ -206,3 +212,4 @@
 </section>
 </body>
 </html>
+
