Updated contacts, research links

--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@
                 <h1>Research</h1>
             </div>
             <div class="col-4" style="position: relative;">
-                <a href="#" class="see_more"><h5>See More<img src="../static/down_arrow.svg"
+                <a href="../templates/research.html" class="see_more"><h5>See More<img src="../static/down_arrow.svg"
                                                               style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/>
                 </h5></a>
             </div>
@@ -147,7 +147,7 @@
         <div class="row justify-content-center">
             <div class="col-12 justify-content-center mob_seeMore">
                 <div>
-                    <a href="#">
+                    <a href="../templates/research.html">
                         <h5 style="font-size: 1rem;">See More
                             <img src="../static/down_arrow.svg"
                                  style="transform: rotate(-90deg);padding-top: 50px;width:0.8rem;"/>
@@ -170,8 +170,8 @@
         </div>
         <br>
         <div class="row" style="text-align: center;">
-            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                <i class="fas fa-home colorify fa-2x" aria-hidden="true"></i>
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12" style="padding-left: 3vw; padding-right: 3vw;">
+                <i class="fas fa-home colorify fa-3x" aria-hidden="true"></i>
                 <br>
                 <p>A-416 New Academic Block
                     Indraprastha Institute Of
@@ -179,12 +179,12 @@
                     Delhi-110020</p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                <i class="fas fa-phone colorify fa-2x" aria-hidden="true"></i>
+                <i class="fas fa-phone colorify fa-3x" aria-hidden="true"></i>
                 <br>
                 <p>011-26907521</p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                <i class="fas fa-envelope colorify fa-2x" aria-hidden="true"></i>
+                <i class="fas fa-envelope colorify fa-3x" aria-hidden="true"></i>
                 <br>
                 <p>weave-lab-admin@iiitd.ac.in</p>
             </div>
